[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Politics_and_Py"
version = "0.1.0"
authors = [
  { name="Star_Tube", discord="Star_Tube#1336" },
]
description = "A package for managing Politics and War data"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependancies = ['requests']

[project.urls]
"Homepage" = "https://github.com/Star-Tube/PnP"
"Bug Tracker" = "https://github.com/Star-Tube/PnP/issues"